# SyNSlicerEngine-A-5-Axis-3D-Printing-Slicer

./: .gitignore  CMakeLists.txt  README.md
Setup Guide/: System Setup for SyNSlicerEngine.pptx
data/: bunny_Z_zero_1500.stl  firebird_1mm_zero.stl
documentation/: Doxyfile
documentation/html/: annotated.html  auto__partitioner_8cpp.html  auto__partitioner_8h.html  auto__partitioner_8h_source.html  auto__partitioner__gui_8cpp.html  auto__partitioner__gui_8h.html  auto__partitioner__gui_8h_source.html  auto__slicer_8cpp.html  auto__slicer_8h.html  auto__slicer_8h_source.html  auto__slicer__gui_8cpp.html  auto__slicer__gui_8h.html  auto__slicer__gui_8h_source.html  central__widget_8cpp.html  central__widget_8h.html  central__widget_8h_source.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_auto_partitioner-members.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_auto_partitioner.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_auto_slicer-members.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_auto_slicer.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_gcode_generator-members.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_gcode_generator.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_infill_path_generator-members.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_infill_path_generator.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_mesh_clipper-members.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_mesh_clipper.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_printing_sequence_determinator-members.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_printing_sequence_determinator.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_slicer-members.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_slicer.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_support_generator-members.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_support_generator.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_swept_volumw_calculator-members.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_swept_volumw_calculator.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_toolpath_generator-members.html  class_sy_n_slicer_engine_1_1_algorithm_1_1_toolpath_generator.html  class_sy_n_slicer_engine_1_1_object_1_1_line-members.html  class_sy_n_slicer_engine_1_1_object_1_1_line.html  class_sy_n_slicer_engine_1_1_object_1_1_nozzle-members.html  class_sy_n_slicer_engine_1_1_object_1_1_nozzle.html  (+329 more)
documentation/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+41 more)
src/SyNSlicerEngine/: CGAL_CORE_CLASS  pch_SyNSlicerEngine.cpp  pch_SyNSlicerEngine.h
src/SyNSlicerEngine/Algorithm/: auto_partitioner.cpp  auto_partitioner.h  auto_slicer.cpp  auto_slicer.h  gcode_generator.cpp  gcode_generator.h  infill_path_generator.cpp  infill_path_generator.h  mesh_clipper.cpp  mesh_clipper.h  printing_sequence_determinator.cpp  printing_sequence_determinator.h  slicer.cpp  slicer.h  support_generator.cpp  support_generator.h  swept_volume_calculater.cpp  swept_volume_calculater.h  toolpath_generator.cpp  toolpath_generator.h
src/SyNSlicerEngine/Object/: line.cpp  line.h  nozzle.cpp  nozzle.h  partition.cpp  partition.h  partition_collection.cpp  partition_collection.h  plane.cpp  plane.h  point_cloud.cpp  point_cloud.h  polygon.cpp  polygon.h  polygon_collection.cpp  polygon_collection.h  polyhedron.cpp  polyhedron.h  polyline.cpp  polyline.h  polyline_collection.cpp  polyline_collection.h  printing_layer.cpp  printing_layer.h  printing_layer_collection.cpp  printing_layer_collection.h  printing_path_collection.cpp  printing_path_collection.h  skeleton.cpp  skeleton.h  tool_point.cpp  tool_point.h  toolpath.cpp  toolpath.h  toolpath_collection.cpp  toolpath_collection.h  triangle.cpp  triangle.h
src/SyNSlicerGUI/: auto_partitioner.cpp  auto_partitioner.h  auto_partitioner_debug.cpp  auto_partitioner_debug.h  auto_slicer.cpp  auto_slicer.h  custom_slider.cpp  custom_slider.h  gcode_generator.cpp  infill_path_generator.cpp  infill_path_generator.h  main.cpp  object_drawer.cpp  object_drawer.h  object_for_visualization.cpp  object_for_visualization.h  pch_SyNSlicerGUI.cpp  pch_SyNSlicerGUI.h  printing_sequence_determinator.cpp  printing_sequence_determinator.h  printing_sequence_determinator_debug.cpp  printing_sequence_determinator_debug.h  sub_window.cpp  sub_window.h  support_generator.cpp  support_generator.h  support_generator_debug.cpp  support_generator_debug.h  swept_volume_calculater.cpp  swept_volume_calculater.h  toolpath_generator.cpp  toolpath_generator.h
src/SyNSlicerGUI/Algorithm/: auto_partitioner_gui.cpp  auto_partitioner_gui.h  auto_slicer_gui.cpp  auto_slicer_gui.h  gcode_generator_gui.cpp  gcode_generator_gui.h  infill_path_generator_gui.cpp  infill_path_generator_gui.h  mesh_clipper_gui.cpp  mesh_clipper_gui.h  printing_sequence_determinator_gui.cpp  printing_sequence_determinator_gui.h  slicer_gui.cpp  slicer_gui.h  support_generator_gui.cpp  support_generator_gui.h  swept_volume_calculater_gui.cpp  swept_volume_calculater_gui.h  toolpath_generator_gui.cpp  toolpath_generator_gui.h
src/SyNSlicerGUI/Qt/: QT_CORE_CLASS  central_widget.cpp  central_widget.h  custom_slider.h  main_window.cpp  main_window.h  menu_bar.cpp  menu_bar.h  mesh_hierarchy_tree_widget.cpp  mesh_hierarchy_tree_widget.h  mesh_loading_widget.cpp  mesh_loading_widget.h  model_partitioning_widget.cpp  model_partitioning_widget.h  path_planning_dock_widget.cpp  path_planning_dock_widget.h  path_planning_stacked_widget.cpp  path_planning_stacked_widget.h  preview_widget.cpp  preview_widget.h  sub_window.cpp  sub_window.h  toolpath_generating_widget.cpp  toolpath_generating_widget.h
(+9 files in other folders)
